# Git-Hub-Projects-PIAIC

./: 100-code-of-python.ipynb  README.md  oop.ipynb
agenticai/: pyproject.toml
agenticai/src/agenticai/: bmi_calculator.py  main.py  script.py
