[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Amdubaloch", email = "amdubaloch2005@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.2",
]

[project.scripts]
agenticai = "agenticai:main"
hello = "agenticai.main:Hello_world"
streamlit_app = "agenticai.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
